# MirageRender

./: CMakeLists.txt  build.ps1  build.sh
Doc/: ME 0.0.1.md
Plugin/Linux/glew-2.1.0/lib/: libGLEW.so.2.1.0
Source/: MirageEngine.h  main.cpp
Source/Core/: Core.h
Source/Core/Allocator/: Allocator.h  AllocatorBase.h  DoubleEndedStackAllocator.cpp  DoubleEndedStackAllocator.h  LinearAllocator.cpp  LinearAllocator.h  MemoryPool.cpp  MemoryPool.h  PoolAllocator.h  StackAllocator.cpp  StackAllocator.h
Source/Core/BasePlatform/: BaseApplication.h  BaseWindow.cpp  BaseWindow.h
Source/Core/Framework/: ISystem.h
Source/Core/HAL/: IOBase.h  Platform.h
Source/Core/Linux/: LinuxApplication.h  LinuxWindow.cpp  LinuxWindow.h
Source/Core/Math/: Camera.h  Color.cpp  Color.h  MEMath.cpp  MEMath.h  Matrix.cpp  Matrix.h  Quaternion.cpp  Quaternion.h  Rang.h  Rotater.cpp  Rotater.h  TColor.cpp  TColor.h  TMath.h  TMatrix.cpp  TMatrix.h  TQuaternion.cpp  TQuaternion.h  TRotater.cpp  TRotater.h  TTransform.cpp  TTransform.h  TVector2.cpp  TVector2.h  TVector3.cpp  TVector3.h  TVector4.cpp  TVector4.h  Transform.cpp  Transform.h  Vector2.h  Vector3.h  Vector4.h  VersionNumber.cpp  VersionNumber.h
Source/Core/Windows/: WindowsApplication.h
Source/Entity/: Entity.h  EntityComponent.h  EntitySystem.h
Source/Render/BaseRender/: BaseRender.cpp  BaseRender.h
Source/Render/RenderDX11/: RenderDX11.cpp  RenderDX11.h
Source/Render/RenderOGL4/: RenderOGL4.cpp  RenderOGL4.h
Source/Resource/: ResourceSystem.h
Source/Resource/Element/: IResElement.h  ResMesh.h  ResTexture.h  ResTexturecpp.h
Source/Resource/Format/: TextureFormat.h  VertexFormat.h
